# secure-operator

./: .env.example  .gitignore  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
src/api/: main.py
src/api/routers/: agent.py  health.py
src/config/: settings.py
src/utils/: logging.py
tests/: conftest.py
